[gd_scene load_steps=2 format=3 uid="uid://bn4hnr8bbq5t0"]

[ext_resource type="Script" uid="uid://djip16umi6qh0" path="res://game/ui/summary_screen/summary_screen.gd" id="1_vla81"]

[node name="SummaryScreen" type="Node"]
script = ExtResource("1_vla81")

[node name="SummaryScreen" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -65.5
offset_top = 150.0
offset_right = 65.5
offset_bottom = 173.0
grow_horizontal = 2
text = "Summary Screen"

[node name="ShardsLabel" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -71.5
offset_top = 185.0
offset_right = 71.5
offset_bottom = 208.0
grow_horizontal = 2
text = "You Have 0 Shards"

[node name="Return To Town" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -64.0
offset_top = -15.5
offset_right = 64.0
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2
text = "Return to Town"

[node name="Main Menu" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -48.0
offset_top = 30.0
offset_right = 48.0
offset_bottom = 61.0
grow_horizontal = 2
grow_vertical = 2
text = "Main Menu"

[connection signal="pressed" from="Return To Town" to="." method="enter_town"]
[connection signal="pressed" from="Main Menu" to="." method="main_menu"]
